# school

./: .gitignore  pyproject.toml
.github/workflows/: cicd.yaml
apps/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/group/: models.py  serializers.py  urls.py  views.py
apps/shared/django/: models.py
apps/users/: models.py  serializers.py  urls.py  views.py
root/: settings.py  urls.py  wsgi.py
